Use openjfx variables for launcher.